// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`import rust style 1`] = `
[
  {
    "end": 19,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "my",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "foo",
        },
      ],
    },
    "kind": "treeImport",
    "start": 5,
  },
]
`;

exports[`simple fn export 1`] = `
{
  "aliases": [],
  "exports": [
    {
      "end": 16,
      "kind": "export",
      "ref": {
        "calls": [],
        "end": 59,
        "kind": "fn",
        "name": "one",
        "nameElem": {
          "end": 26,
          "kind": "fnName",
          "name": "one",
          "start": 23,
        },
        "start": 20,
        "typeRefs": [
          {
            "end": 35,
            "kind": "typeRef",
            "name": "i32",
            "start": 32,
          },
        ],
      },
      "start": 8,
    },
  ],
  "fns": [
    {
      "calls": [],
      "end": 59,
      "kind": "fn",
      "name": "one",
      "nameElem": {
        "end": 26,
        "kind": "fnName",
        "name": "one",
        "start": 23,
      },
      "start": 20,
      "typeRefs": [
        {
          "end": 35,
          "kind": "typeRef",
          "name": "i32",
          "start": 32,
        },
      ],
    },
  ],
  "globalDirectives": [],
  "imports": [],
  "kind": "text",
  "modulePath": "./test.wgsl",
  "name": "oldName",
  "preppedSrc": "
    // #export
    fn one() -> i32 {
      return 1;
    }
  ",
  "src": "
    // #export
    fn one() -> i32 {
      return 1;
    }
  ",
  "srcMap": SrcMap {
    "dest": "
    // #export
    fn one() -> i32 {
      return 1;
    }
  ",
    "entries": [
      {
        "destEnd": 62,
        "destStart": 0,
        "src": "
    // #export
    fn one() -> i32 {
      return 1;
    }
  ",
        "srcEnd": 62,
        "srcStart": 0,
      },
    ],
  },
  "structs": [],
  "template": undefined,
  "vars": [],
}
`;

exports[`simple fn import 1`] = `
{
  "aliases": [],
  "exports": [],
  "fns": [
    {
      "calls": [
        {
          "end": 38,
          "kind": "call",
          "name": "foo",
          "start": 35,
        },
      ],
      "end": 43,
      "kind": "fn",
      "name": "bar",
      "nameElem": {
        "end": 30,
        "kind": "fnName",
        "name": "bar",
        "start": 27,
      },
      "start": 24,
      "typeRefs": [],
    },
  ],
  "globalDirectives": [],
  "imports": [
    {
      "end": 19,
      "imports": ImportTree {
        "segments": [
          SimpleSegment {
            "args": undefined,
            "as": undefined,
            "name": "foo",
          },
        ],
      },
      "kind": "treeImport",
      "start": 8,
    },
  ],
  "kind": "text",
  "modulePath": "./test.wgsl",
  "name": "oldName",
  "preppedSrc": "
    // #import foo
    fn bar() { foo(); }
  ",
  "src": "
    // #import foo
    fn bar() { foo(); }
  ",
  "srcMap": SrcMap {
    "dest": "
    // #import foo
    fn bar() { foo(); }
  ",
    "entries": [
      {
        "destEnd": 46,
        "destStart": 0,
        "src": "
    // #import foo
    fn bar() { foo(); }
  ",
        "srcEnd": 46,
        "srcStart": 0,
      },
    ],
  },
  "structs": [],
  "template": undefined,
  "vars": [],
}
`;
